@@ -14,8 +14,16 @@ test_simple_diagnostics()
   diag("this is IMPORTANT, make sure we see it");
 }
 
+void
+test_format_diagnostics()
+{
+  notef("note number = %d", 42);
+  diagf("diag number = %d", 47);
+}
+
 void test_simple_passfail()
 {
   pass("this is a passing test");
   fail("this is a failing test");
 }
+
